--- a/xor.ipynb
+++ b/xor.ipynb
@@ -36,6 +36,325 @@
     "def generateInputs(num):\n",
     "    return [[randint(-10, 10), randint(-10, 10)] for _ in range(num)]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/150\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 1.3884\n",
+      "Epoch 2/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 1.3188\n",
+      "Epoch 3/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 1.2592\n",
+      "Epoch 4/150\n",
+      "1/1 [==============================] - 0s 21ms/step - loss: 1.2102\n",
+      "Epoch 5/150\n",
+      "1/1 [==============================] - 0s 24ms/step - loss: 1.1713\n",
+      "Epoch 6/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 1.1409\n",
+      "Epoch 7/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 1.1170\n",
+      "Epoch 8/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 1.0980\n",
+      "Epoch 9/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 1.0826\n",
+      "Epoch 10/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 1.0700\n",
+      "Epoch 11/150\n",
+      "1/1 [==============================] - 0s 19ms/step - loss: 1.0596\n",
+      "Epoch 12/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 1.0509\n",
+      "Epoch 13/150\n",
+      "1/1 [==============================] - 0s 18ms/step - loss: 1.0436\n",
+      "Epoch 14/150\n",
+      "1/1 [==============================] - 0s 23ms/step - loss: 1.0376\n",
+      "Epoch 15/150\n",
+      "1/1 [==============================] - 0s 19ms/step - loss: 1.0326\n",
+      "Epoch 16/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 1.0285\n",
+      "Epoch 17/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 1.0249\n",
+      "Epoch 18/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 1.0219\n",
+      "Epoch 19/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 1.0193\n",
+      "Epoch 20/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 1.0170\n",
+      "Epoch 21/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 1.0149\n",
+      "Epoch 22/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 1.0130\n",
+      "Epoch 23/150\n",
+      "1/1 [==============================] - 0s 18ms/step - loss: 1.0112\n",
+      "Epoch 24/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 1.0094\n",
+      "Epoch 25/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 1.0076\n",
+      "Epoch 26/150\n",
+      "1/1 [==============================] - 0s 21ms/step - loss: 1.0057\n",
+      "Epoch 27/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 1.0038\n",
+      "Epoch 28/150\n",
+      "1/1 [==============================] - 0s 19ms/step - loss: 1.0019\n",
+      "Epoch 29/150\n",
+      "1/1 [==============================] - 0s 30ms/step - loss: 0.9999\n",
+      "Epoch 30/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 0.9979\n",
+      "Epoch 31/150\n",
+      "1/1 [==============================] - 0s 20ms/step - loss: 0.9960\n",
+      "Epoch 32/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9943\n",
+      "Epoch 33/150\n",
+      "1/1 [==============================] - 0s 26ms/step - loss: 0.9928\n",
+      "Epoch 34/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9916\n",
+      "Epoch 35/150\n",
+      "1/1 [==============================] - 0s 18ms/step - loss: 0.9908\n",
+      "Epoch 36/150\n",
+      "1/1 [==============================] - 0s 23ms/step - loss: 0.9901\n",
+      "Epoch 37/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9896\n",
+      "Epoch 38/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9892\n",
+      "Epoch 39/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.9888\n",
+      "Epoch 40/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9882\n",
+      "Epoch 41/150\n",
+      "1/1 [==============================] - 0s 19ms/step - loss: 0.9876\n",
+      "Epoch 42/150\n",
+      "1/1 [==============================] - 0s 24ms/step - loss: 0.9869\n",
+      "Epoch 43/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9861\n",
+      "Epoch 44/150\n",
+      "1/1 [==============================] - 0s 19ms/step - loss: 0.9852\n",
+      "Epoch 45/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.9842\n",
+      "Epoch 46/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.9831\n",
+      "Epoch 47/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9821\n",
+      "Epoch 48/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.9810\n",
+      "Epoch 49/150\n",
+      "1/1 [==============================] - 0s 24ms/step - loss: 0.9800\n",
+      "Epoch 50/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.9790\n",
+      "Epoch 51/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.9781\n",
+      "Epoch 52/150\n",
+      "1/1 [==============================] - 0s 27ms/step - loss: 0.9773\n",
+      "Epoch 53/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.9764\n",
+      "Epoch 54/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.9756\n",
+      "Epoch 55/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9748\n",
+      "Epoch 56/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.9739\n",
+      "Epoch 57/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 0.9730\n",
+      "Epoch 58/150\n",
+      "1/1 [==============================] - 0s 35ms/step - loss: 0.9719\n",
+      "Epoch 59/150\n",
+      "1/1 [==============================] - 0s 20ms/step - loss: 0.9708\n",
+      "Epoch 60/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.9697\n",
+      "Epoch 61/150\n",
+      "1/1 [==============================] - 0s 22ms/step - loss: 0.9684\n",
+      "Epoch 62/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9672\n",
+      "Epoch 63/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.9659\n",
+      "Epoch 64/150\n",
+      "1/1 [==============================] - 0s 23ms/step - loss: 0.9646\n",
+      "Epoch 65/150\n",
+      "1/1 [==============================] - 0s 10ms/step - loss: 0.9633\n",
+      "Epoch 66/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.9619\n",
+      "Epoch 67/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9605\n",
+      "Epoch 68/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.9591\n",
+      "Epoch 69/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.9575\n",
+      "Epoch 70/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9559\n",
+      "Epoch 71/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.9542\n",
+      "Epoch 72/150\n",
+      "1/1 [==============================] - 0s 18ms/step - loss: 0.9523\n",
+      "Epoch 73/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.9504\n",
+      "Epoch 74/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.9484\n",
+      "Epoch 75/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.9463\n",
+      "Epoch 76/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.9440\n",
+      "Epoch 77/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.9417\n",
+      "Epoch 78/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9393\n",
+      "Epoch 79/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.9368\n",
+      "Epoch 80/150\n",
+      "1/1 [==============================] - 0s 30ms/step - loss: 0.9341\n",
+      "Epoch 81/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.9313\n",
+      "Epoch 82/150\n",
+      "1/1 [==============================] - 0s 24ms/step - loss: 0.9283\n",
+      "Epoch 83/150\n",
+      "1/1 [==============================] - 0s 78ms/step - loss: 0.9252\n",
+      "Epoch 84/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.9219\n",
+      "Epoch 85/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.9185\n",
+      "Epoch 86/150\n",
+      "1/1 [==============================] - 0s 68ms/step - loss: 0.9149\n",
+      "Epoch 87/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.9112\n",
+      "Epoch 88/150\n",
+      "1/1 [==============================] - 0s 27ms/step - loss: 0.9073\n",
+      "Epoch 89/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.9033\n",
+      "Epoch 90/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.8991\n",
+      "Epoch 91/150\n",
+      "1/1 [==============================] - 0s 10ms/step - loss: 0.8948\n",
+      "Epoch 92/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.8904\n",
+      "Epoch 93/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 0.8859\n",
+      "Epoch 94/150\n",
+      "1/1 [==============================] - 0s 50ms/step - loss: 0.8813\n",
+      "Epoch 95/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.8766\n",
+      "Epoch 96/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.8719\n",
+      "Epoch 97/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.8671\n",
+      "Epoch 98/150\n",
+      "1/1 [==============================] - 0s 10ms/step - loss: 0.8624\n",
+      "Epoch 99/150\n",
+      "1/1 [==============================] - 0s 21ms/step - loss: 0.8577\n",
+      "Epoch 100/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.8530\n",
+      "Epoch 101/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.8485\n",
+      "Epoch 102/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.8440\n",
+      "Epoch 103/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.8396\n",
+      "Epoch 104/150\n",
+      "1/1 [==============================] - 0s 24ms/step - loss: 0.8354\n",
+      "Epoch 105/150\n",
+      "1/1 [==============================] - 0s 25ms/step - loss: 0.8314\n",
+      "Epoch 106/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.8275\n",
+      "Epoch 107/150\n",
+      "1/1 [==============================] - 0s 20ms/step - loss: 0.8238\n",
+      "Epoch 108/150\n",
+      "1/1 [==============================] - 0s 20ms/step - loss: 0.8203\n",
+      "Epoch 109/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.8169\n",
+      "Epoch 110/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.8137\n",
+      "Epoch 111/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 0.8107\n",
+      "Epoch 112/150\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.8079\n",
+      "Epoch 113/150\n",
+      "1/1 [==============================] - 0s 19ms/step - loss: 0.8052\n",
+      "Epoch 114/150\n",
+      "1/1 [==============================] - 0s 18ms/step - loss: 0.8027\n",
+      "Epoch 115/150\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.8003\n",
+      "Epoch 116/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.7981\n",
+      "Epoch 117/150\n",
+      "1/1 [==============================] - 0s 10ms/step - loss: 0.7960\n",
+      "Epoch 118/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.7940\n",
+      "Epoch 119/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.7921\n",
+      "Epoch 120/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.7903\n",
+      "Epoch 121/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.7886\n",
+      "Epoch 122/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7870\n",
+      "Epoch 123/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.7856\n",
+      "Epoch 124/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.7841\n",
+      "Epoch 125/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7828\n",
+      "Epoch 126/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.7816\n",
+      "Epoch 127/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 0.7804\n",
+      "Epoch 128/150\n",
+      "1/1 [==============================] - 0s 21ms/step - loss: 0.7793\n",
+      "Epoch 129/150\n",
+      "1/1 [==============================] - 0s 6ms/step - loss: 0.7782\n",
+      "Epoch 130/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7772\n",
+      "Epoch 131/150\n",
+      "1/1 [==============================] - 0s 10ms/step - loss: 0.7762\n",
+      "Epoch 132/150\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.7754\n",
+      "Epoch 133/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.7745\n",
+      "Epoch 134/150\n",
+      "1/1 [==============================] - 0s 21ms/step - loss: 0.7737\n",
+      "Epoch 135/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.7730\n",
+      "Epoch 136/150\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.7722\n",
+      "Epoch 137/150\n",
+      "1/1 [==============================] - 0s 22ms/step - loss: 0.7716\n",
+      "Epoch 138/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7709\n",
+      "Epoch 139/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7703\n",
+      "Epoch 140/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7697\n",
+      "Epoch 141/150\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.7692\n",
+      "Epoch 142/150\n",
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.7687\n",
+      "Epoch 143/150\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 0.7682\n",
+      "Epoch 144/150\n",
+      "1/1 [==============================] - 0s 36ms/step - loss: 0.7677\n",
+      "Epoch 145/150\n",
+      "1/1 [==============================] - 0s 10ms/step - loss: 0.7673\n",
+      "Epoch 146/150\n",
+      "1/1 [==============================] - 0s 15ms/step - loss: 0.7668\n",
+      "Epoch 147/150\n",
+      "1/1 [==============================] - 0s 39ms/step - loss: 0.7664\n",
+      "Epoch 148/150\n",
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.7660\n",
+      "Epoch 149/150\n",
+      "1/1 [==============================] - 0s 8ms/step - loss: 0.7657\n",
+      "Epoch 150/150\n",
+      "1/1 [==============================] - 0s 23ms/step - loss: 0.7653\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = []\n",
+    "lossHistory = []\n",
+    "\n",
+    "model = initModel(150)"
+   ]
   }
  ],
  "metadata": {
