--- a/xor.ipynb
+++ b/xor.ipynb
@@ -376,7 +376,12 @@
     "start = numpy.array([[-1,-1],[-1,1],[1,-1],[1,1]])\n",
     "predictions = model.predict(start)\n",
     "for i in predictions:\n",
-    "    print(i)"
+    "    print(i)\n",
+    "\n",
+    "#Не знал куда вставить, поэтому пусть тут будет коментарием.\n",
+    "# Использование как минимум одного скрытого слоя в нейронной сети обычно требуется для моделирования сложных и нелинейных взаимосвязей в данных.\n",
+    "# Этот слой помогает учеть более сложные паттерны и характеристики, которые могут быть скрыты в данных.\n",
+    "# Без скрытого слоя, нейронная сеть может ограничиваться только линейными комбинациями входных данных, что может быть недостаточным для точного моделирования сложных задач."
    ]
   }
  ],
