--- a/tt/t_test.ipynb
+++ b/tt/t_test.ipynb
@@ -396,10 +396,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>city</th>\n",
+       "      <th>subscription_type</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>date</th>\n",
+       "      <th>date_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>4409.919140</td>\n",
+       "      <td>25.599769</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>2617.592153</td>\n",
+       "      <td>15.816871</td>\n",
+       "      <td>2021-01-18</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>754.159807</td>\n",
+       "      <td>6.232113</td>\n",
+       "      <td>2021-04-20</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>2694.783254</td>\n",
+       "      <td>18.511000</td>\n",
+       "      <td>2021-08-11</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>4028.687306</td>\n",
+       "      <td>26.265803</td>\n",
+       "      <td>2021-08-28</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  name  age    city subscription_type     distance   duration  \\\n",
+       "0        1  Кира   22  Тюмень             ultra  4409.919140  25.599769   \n",
+       "1        1  Кира   22  Тюмень             ultra  2617.592153  15.816871   \n",
+       "2        1  Кира   22  Тюмень             ultra   754.159807   6.232113   \n",
+       "3        1  Кира   22  Тюмень             ultra  2694.783254  18.511000   \n",
+       "4        1  Кира   22  Тюмень             ultra  4028.687306  26.265803   \n",
+       "\n",
+       "        date  date_month  \n",
+       "0 2021-01-01           1  \n",
+       "1 2021-01-18           1  \n",
+       "2 2021-04-20           4  \n",
+       "3 2021-08-11           8  \n",
+       "4 2021-08-28           8  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = users.merge(rides, on='user_id')\n",
+    "data['date_month'] = data['date'].dt.month\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>city</th>\n",
+       "      <th>subscription_type</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>date</th>\n",
+       "      <th>date_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6672</th>\n",
+       "      <td>700</td>\n",
+       "      <td>Айдар</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Омск</td>\n",
+       "      <td>free</td>\n",
+       "      <td>2515.690719</td>\n",
+       "      <td>14.944286</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6673</th>\n",
+       "      <td>700</td>\n",
+       "      <td>Айдар</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Омск</td>\n",
+       "      <td>free</td>\n",
+       "      <td>846.932642</td>\n",
+       "      <td>16.234663</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6674</th>\n",
+       "      <td>700</td>\n",
+       "      <td>Айдар</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Омск</td>\n",
+       "      <td>free</td>\n",
+       "      <td>4004.434142</td>\n",
+       "      <td>20.016628</td>\n",
+       "      <td>2021-02-04</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6675</th>\n",
+       "      <td>700</td>\n",
+       "      <td>Айдар</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Омск</td>\n",
+       "      <td>free</td>\n",
+       "      <td>1205.911290</td>\n",
+       "      <td>9.782872</td>\n",
+       "      <td>2021-02-10</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6676</th>\n",
+       "      <td>700</td>\n",
+       "      <td>Айдар</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Омск</td>\n",
+       "      <td>free</td>\n",
+       "      <td>3047.379435</td>\n",
+       "      <td>17.427673</td>\n",
+       "      <td>2021-02-14</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      user_id   name  age  city subscription_type     distance   duration  \\\n",
+       "6672      700  Айдар   22  Омск              free  2515.690719  14.944286   \n",
+       "6673      700  Айдар   22  Омск              free   846.932642  16.234663   \n",
+       "6674      700  Айдар   22  Омск              free  4004.434142  20.016628   \n",
+       "6675      700  Айдар   22  Омск              free  1205.911290   9.782872   \n",
+       "6676      700  Айдар   22  Омск              free  3047.379435  17.427673   \n",
+       "\n",
+       "           date  date_month  \n",
+       "6672 2021-01-02           1  \n",
+       "6673 2021-02-01           2  \n",
+       "6674 2021-02-04           2  \n",
+       "6675 2021-02-10           2  \n",
+       "6676 2021-02-14           2  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>city</th>\n",
+       "      <th>subscription_type</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>date</th>\n",
+       "      <th>date_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>4409.919140</td>\n",
+       "      <td>25.599769</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>2617.592153</td>\n",
+       "      <td>15.816871</td>\n",
+       "      <td>2021-01-18</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>754.159807</td>\n",
+       "      <td>6.232113</td>\n",
+       "      <td>2021-04-20</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>2694.783254</td>\n",
+       "      <td>18.511000</td>\n",
+       "      <td>2021-08-11</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кира</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Тюмень</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>4028.687306</td>\n",
+       "      <td>26.265803</td>\n",
+       "      <td>2021-08-28</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  name  age    city subscription_type     distance   duration  \\\n",
+       "0        1  Кира   22  Тюмень             ultra  4409.919140  25.599769   \n",
+       "1        1  Кира   22  Тюмень             ultra  2617.592153  15.816871   \n",
+       "2        1  Кира   22  Тюмень             ultra   754.159807   6.232113   \n",
+       "3        1  Кира   22  Тюмень             ultra  2694.783254  18.511000   \n",
+       "4        1  Кира   22  Тюмень             ultra  4028.687306  26.265803   \n",
+       "\n",
+       "        date  date_month  \n",
+       "0 2021-01-01           1  \n",
+       "1 2021-01-18           1  \n",
+       "2 2021-04-20           4  \n",
+       "3 2021-08-11           8  \n",
+       "4 2021-08-28           8  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_free = data.query('subscription_type == \"free\"')\n",
+    "data_ultra = data.query('subscription_type == \"ultra\"')\n",
+    "display(data_free.head())\n",
+    "data_ultra.head()"
+   ]
   }
  ],
  "metadata": {
