--- a/tt/t_test.ipynb
+++ b/tt/t_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "4        1  4028.687306  26.265803 2021-08-28"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,6 +768,199 @@
     "display(data_free.head())\n",
     "data_ultra.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_cd = data\n",
+    "# data_cd.duration = data_cd.duration.apply(numpy.ceil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dmitriy Drozhzhin\\AppData\\Local\\Temp\\ipykernel_16152\\1919354306.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  users_pivot.apply(lambda x: users[users.user_id == x.name[0]].iloc[0][-1], axis=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>month_distance</th>\n",
+       "      <th>month_duration</th>\n",
+       "      <th>month_rides</th>\n",
+       "      <th>subscription_type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th>date_month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>7027.511294</td>\n",
+       "      <td>41.416640</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>754.159807</td>\n",
+       "      <td>6.232113</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6723.470560</td>\n",
+       "      <td>44.776802</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5809.911100</td>\n",
+       "      <td>31.578017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>7003.499363</td>\n",
+       "      <td>53.397424</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>6751.629942</td>\n",
+       "      <td>27.203912</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">2</th>\n",
+       "      <th>3</th>\n",
+       "      <td>10187.723006</td>\n",
+       "      <td>60.959959</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6164.381824</td>\n",
+       "      <td>39.048633</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3255.338202</td>\n",
+       "      <td>13.851127</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6780.722964</td>\n",
+       "      <td>46.170157</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    month_distance  month_duration  month_rides  \\\n",
+       "user_id date_month                                                \n",
+       "1       1              7027.511294       41.416640            2   \n",
+       "        4               754.159807        6.232113            1   \n",
+       "        8              6723.470560       44.776802            2   \n",
+       "        10             5809.911100       31.578017            2   \n",
+       "        11             7003.499363       53.397424            3   \n",
+       "        12             6751.629942       27.203912            2   \n",
+       "2       3             10187.723006       60.959959            3   \n",
+       "        4              6164.381824       39.048633            2   \n",
+       "        6              3255.338202       13.851127            1   \n",
+       "        7              6780.722964       46.170157            2   \n",
+       "\n",
+       "                   subscription_type  \n",
+       "user_id date_month                    \n",
+       "1       1                      ultra  \n",
+       "        4                      ultra  \n",
+       "        8                      ultra  \n",
+       "        10                     ultra  \n",
+       "        11                     ultra  \n",
+       "        12                     ultra  \n",
+       "2       3                      ultra  \n",
+       "        4                      ultra  \n",
+       "        6                      ultra  \n",
+       "        7                      ultra  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users_pivot = pandas.pivot_table(\n",
+    "    data, \n",
+    "    index=['user_id', 'date_month'],\n",
+    "    values=['distance', 'duration'], \n",
+    "    aggfunc={\n",
+    "        'distance': 'sum',\n",
+    "        'user_id': 'count',\n",
+    "        'duration': 'sum',\n",
+    "    }\n",
+    ")\n",
+    "users_pivot.columns = ['month_distance', 'month_duration', 'month_rides']\n",
+    "users_pivot['subscription_type'] = \\\n",
+    "    users_pivot.apply(lambda x: users[users.user_id == x.name[0]].iloc[0][-1], axis=1)\n",
+    "users_pivot.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
