--- a/tt/t_test.ipynb
+++ b/tt/t_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,104 @@
     "import numpy\n",
     "import seaborn\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy import stats as st\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4409.919140</td>\n",
+       "      <td>25.599769</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2617.592153</td>\n",
+       "      <td>15.816871</td>\n",
+       "      <td>2021-01-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>754.159807</td>\n",
+       "      <td>6.232113</td>\n",
+       "      <td>2021-04-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2694.783254</td>\n",
+       "      <td>18.511000</td>\n",
+       "      <td>2021-08-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4028.687306</td>\n",
+       "      <td>26.265803</td>\n",
+       "      <td>2021-08-28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id     distance   duration       date\n",
+       "0        1  4409.919140  25.599769 2021-01-01\n",
+       "1        1  2617.592153  15.816871 2021-01-18\n",
+       "2        1   754.159807   6.232113 2021-04-20\n",
+       "3        1  2694.783254  18.511000 2021-08-11\n",
+       "4        1  4028.687306  26.265803 2021-08-28"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rides = pandas.read_csv('rides_go.csv')\n",
+    "subscriptions = pandas.read_csv('subscriptions_go.csv')\n",
+    "users = pandas.read_csv('users_go.csv')\n",
+    "\n",
+    "rides['date'] = pandas.to_datetime(rides['date'])\n",
+    "rides.head()"
    ]
   },
   {
@@ -104,107 +200,12 @@
     }
    ],
    "source": [
-    "rides = pandas.read_csv('rides_go.csv')\n",
-    "subscriptions = pandas.read_csv('subscriptions_go.csv')\n",
-    "users = pandas.read_csv('users_go.csv')\n",
-    "\n",
-    "rides['date'] = pandas.to_datetime(rides['date'])\n",
     "rides.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4409.919140</td>\n",
-       "      <td>25.599769</td>\n",
-       "      <td>2021-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2617.592153</td>\n",
-       "      <td>15.816871</td>\n",
-       "      <td>2021-01-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>754.159807</td>\n",
-       "      <td>6.232113</td>\n",
-       "      <td>2021-04-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2694.783254</td>\n",
-       "      <td>18.511000</td>\n",
-       "      <td>2021-08-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4028.687306</td>\n",
-       "      <td>26.265803</td>\n",
-       "      <td>2021-08-28</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   user_id     distance   duration       date\n",
-       "0        1  4409.919140  25.599769 2021-01-01\n",
-       "1        1  2617.592153  15.816871 2021-01-18\n",
-       "2        1   754.159807   6.232113 2021-04-20\n",
-       "3        1  2694.783254  18.511000 2021-08-11\n",
-       "4        1  4028.687306  26.265803 2021-08-28"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rides.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +260,7 @@
        "1             ultra             6                 0               199"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
        "4        5       Адель   28            Омск             ultra"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
        "<Axes: ylabel='count'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
        "4 2021-08-28           8  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +758,7 @@
        "4 2021-08-28           8  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,14 +782,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dmitriy Drozhzhin\\AppData\\Local\\Temp\\ipykernel_16152\\1919354306.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Dmitriy Drozhzhin\\AppData\\Local\\Temp\\ipykernel_2672\\1919354306.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  users_pivot.apply(lambda x: users[users.user_id == x.name[0]].iloc[0][-1], axis=1)\n"
      ]
     },
@@ -933,7 +934,7 @@
        "        7                      ultra  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,10 +958,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>month_distance</th>\n",
+       "      <th>month_duration</th>\n",
+       "      <th>month_rides</th>\n",
+       "      <th>subscription_type</th>\n",
+       "      <th>month_cost</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th>date_month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>7027.511294</td>\n",
+       "      <td>41.416640</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>447.499843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>754.159807</td>\n",
+       "      <td>6.232113</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>236.392681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6723.470560</td>\n",
+       "      <td>44.776802</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>467.660815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5809.911100</td>\n",
+       "      <td>31.578017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>388.468102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>7003.499363</td>\n",
+       "      <td>53.397424</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>519.384541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>6751.629942</td>\n",
+       "      <td>27.203912</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>362.223471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">2</th>\n",
+       "      <th>3</th>\n",
+       "      <td>10187.723006</td>\n",
+       "      <td>60.959959</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>564.759752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6164.381824</td>\n",
+       "      <td>39.048633</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>433.291800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3255.338202</td>\n",
+       "      <td>13.851127</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>282.106764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6780.722964</td>\n",
+       "      <td>46.170157</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ultra</td>\n",
+       "      <td>476.020944</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    month_distance  month_duration  month_rides  \\\n",
+       "user_id date_month                                                \n",
+       "1       1              7027.511294       41.416640            2   \n",
+       "        4               754.159807        6.232113            1   \n",
+       "        8              6723.470560       44.776802            2   \n",
+       "        10             5809.911100       31.578017            2   \n",
+       "        11             7003.499363       53.397424            3   \n",
+       "        12             6751.629942       27.203912            2   \n",
+       "2       3             10187.723006       60.959959            3   \n",
+       "        4              6164.381824       39.048633            2   \n",
+       "        6              3255.338202       13.851127            1   \n",
+       "        7              6780.722964       46.170157            2   \n",
+       "\n",
+       "                   subscription_type  month_cost  \n",
+       "user_id date_month                                \n",
+       "1       1                      ultra  447.499843  \n",
+       "        4                      ultra  236.392681  \n",
+       "        8                      ultra  467.660815  \n",
+       "        10                     ultra  388.468102  \n",
+       "        11                     ultra  519.384541  \n",
+       "        12                     ultra  362.223471  \n",
+       "2       3                      ultra  564.759752  \n",
+       "        4                      ultra  433.291800  \n",
+       "        6                      ultra  282.106764  \n",
+       "        7                      ultra  476.020944  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_month_cost(row):\n",
+    "    if row['subscription_type'] == 'ultra':\n",
+    "        return 199 + (6 * row['month_duration'])\n",
+    "    else:\n",
+    "        return 50 * row['month_rides'] + (8 * row['month_duration'])\n",
+    "\n",
+    "users_pivot['month_cost'] = users_pivot.apply(calculate_month_cost, axis=1)\n",
+    "users_pivot.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Будет ли помесячная выручка от пользователей с подпиской по месяцам выше, чем выручка от пользователей без подписки?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H0$ - помесячная пописка от пользоватлей ultra = помесячная пописке от пользоватлей free \\\n",
+    "$H1$ - помесячная пописка от пользоватлей ultra > помесячная пописке от пользоватлей free"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">p-value: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2.090509569696454e-34</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "p-value: \u001b[1;36m2.090509569696454e-34\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Отвергаем нулевую гипотезу\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Отвергаем нулевую гипотезу\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "ultra_month_cost = users_pivot[users_pivot['subscription_type'] == 'ultra']['month_cost']\n",
+    "free_month_cost = users_pivot[users_pivot['subscription_type'] == 'free']['month_cost']\n",
+    "\n",
+    "result = st.ttest_ind(ultra_month_cost, free_month_cost, alternative = 'greater')\n",
+    "\n",
+    "print(f'p-value: {result.pvalue}')\n",
+    "\n",
+    "if result.pvalue < alpha:\n",
+    "    print('Отвергаем нулевую гипотезу')\n",
+    "else:\n",
+    "    print('Нет оснований отвергнуть нулевую гипотезу')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Среднее количество поездок в месяц пользователей с подпиской больше, чем у пользователей без подписки?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H0$ - среднее количество поездок в месяц у пользоватей с подпиской = количеству поездок в месяц пользователей без подписки \\\n",
+    "$H1$ - среднее количесво поездок в месяц у пользователей с подпиской привышает количество поездок в месяц пользователей без подписки"
+   ]
   }
  ],
  "metadata": {
