--- a/tt/t_test.ipynb
+++ b/tt/t_test.ipynb
@@ -1206,6 +1206,217 @@
     "$H0$ - среднее количество поездок в месяц у пользоватей с подпиской = количеству поездок в месяц пользователей без подписки \\\n",
     "$H1$ - среднее количесво поездок в месяц у пользователей с подпиской привышает количество поездок в месяц пользователей без подписки"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">p-value: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2.090509569696454e-34</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "p-value: \u001b[1;36m2.090509569696454e-34\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Отвергаем нулевую гипотезу\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Отвергаем нулевую гипотезу\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "\n",
+    "subcribe_ultra = users_pivot[users_pivot['subscription_type'] == 'ultra']['month_rides']\n",
+    "subcribe_free = users_pivot[users_pivot['subscription_type'] == 'free']['month_rides']\n",
+    "\n",
+    "result = st.ttest_ind(ultra_month_cost, free_month_cost, alternative = 'greater')\n",
+    "\n",
+    "print(f'p-value: {result.pvalue}')\n",
+    "\n",
+    "if result.pvalue < alpha:\n",
+    "    print('Отвергаем нулевую гипотезу')\n",
+    "    \n",
+    "else:\n",
+    "    print('Нет оснований отвергнуть нулевую гипотезу')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Средняя дистанция поездки \"холодные\" месяца (с октября по март) отличается от \"тёплых\"?\\\n",
+    "$H0$: дистанция поездок в холодные месеца равны дистанции поездок в тёплые месеца \\\n",
+    "$H1$: дистанция поездок в холодные месеца меньше чем дистанция в тёплые "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4945.764339316236</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36m4945.764339316236\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5020.023356959626</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36m5020.023356959626\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">p-value: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.19365908135594664</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "p-value: \u001b[1;36m0.19365908135594664\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Нет оснований отвергнуть нулевую гипотезу\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Нет оснований отвергнуть нулевую гипотезу\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "\n",
+    "cold = [10, 11, 12, 1, 2 ,3]\n",
+    "warm = [4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "middle_cold = users_pivot.query('date_month in @cold')['month_distance']\n",
+    "middle_warm = users_pivot.query('date_month in @warm')['month_distance']\n",
+    "\n",
+    "\n",
+    "\n",
+    "results = st.ttest_ind(\n",
+    "    middle_cold,\n",
+    "    middle_warm,\n",
+    "    alternative='two-sided'\n",
+    ")\n",
+    "print(middle_cold.mean())\n",
+    "print(middle_warm.mean())\n",
+    "print(f'p-value: {results.pvalue}')\n",
+    "\n",
+    "if results.pvalue < alpha:\n",
+    "    print('Отвергаем нулевую гипотезу')\n",
+    "    \n",
+    "else:\n",
+    "    print('Нет оснований отвергнуть нулевую гипотезу')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Среднее время езды на самокате - 30 минут?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H0$: Длительность поездок длится 30 минут \\\n",
+    "$H1$: Длительность поезди больше или меньше 30 минут"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">p-value: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.19365908135594664</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "p-value: \u001b[1;36m0.19365908135594664\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Нет оснований отвергнуть нулевую гипотеза\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Нет оснований отвергнуть нулевую гипотеза\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "target_value = 30\n",
+    "\n",
+    "result = st.ttest_1samp(\n",
+    "    data.duration,\n",
+    "    target_value,\n",
+    "    alternative = 'two-sided'\n",
+    ")\n",
+    "\n",
+    "print(f'p-value: {results.pvalue}')\n",
+    "\n",
+    "if results.pvalue < alpha:\n",
+    "    print('Отвергаем нулевую гипотезу')\n",
+    "    \n",
+    "else:\n",
+    "    print('Нет оснований отвергнуть нулевую гипотеза')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
